--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,27 @@
       .nav-spacing {
         margin: 0 0 0 10px; text-decoration: none;
       }
+
+      .image-link {
+        background: url("../images/small_twitter_logo.png");
+      }
+
+      .read-nav {
+        text-align: center;
+      }
+
+      .outer-frame {
+        width: 560px; margin: 20px auto; padding: 30px; background-color: #fafafa;
+      }
+
+      .red-text {
+        font-style: normal; font-size: 24px; font-weight: bold; color: #ff0000;
+      }
+
+      .head-text {
+        font-style: italic; font-size: 20px;
+      }
+
+      .bottom-subject {
+        text-align: center; margin: 0 0 80px;
+      }
